--- a/public/views/circuit.html
+++ b/public/views/circuit.html
@@ -8,15 +8,15 @@
 </form>
 <hr>
 <ul class="list-group">
-	<li class="list-group-item" ng-repeat="todo in todos">
+	<li class="list-group-item" ng-repeat="circuit in circuits">
 		<form class="form-inline">
 			<div class="form-group">
 				<input type="text" class="form-control" id="inputMessage" 
-					   ng-model="todo.description">
+					   ng-model="circuit.description">
 			</div>
 			<div class="pull-right">
-				<button type="submit" class="btn btn-default" ng-click="update(todo)">Update</button>
-				<button type="submit" class="btn btn-danger" ng-click="delete(todo)">Delete</button>
+				<button type="submit" class="btn btn-default" ng-click="update(circuit)">Update</button>
+				<button type="submit" class="btn btn-danger" ng-click="delete(circuit)">Delete</button>
 			</div>
 		</form>
 	</li>
