--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body{
-/*    padding-top: 70px;*/
     background-image: url("/img/background.jpg");
     background-size: cover;
+    width: 100%;
 }
 
 
@@ -10,24 +10,35 @@ body{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
+    width: 10%;
+    background-color: black opacity: 0,8;
     height: 100%; /* Full height */
     position: fixed; /* Make it stick, even on scroll */
     overflow: auto; /* Enable scrolling if the sidenav has too much content*/
+    
+}
+.navbar-header{
+    width: 10%;
 }
 
-.navcontainer{
-    width:auto;
+.nav>li>a>img{
+    width: 50px;
 }
-.navbar-border{
-	border-bottom: 3px solid #03751e;
+.nav>li>a{
+    color:azure;
+    font-family: sans-serif;
+    font-size: bold;
+    text-align: center;    
 }
+
 
 .navbar-header img{
-	transition: 5s;
+	transition: 7s;
 }
 .navbar-header img:hover{
 	transform: translateX(300px);
 }  
 
+.bodycontainer{
+    width: 90%;
+}
