--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,15 +6,16 @@ body{
 
 
 .navbar{
+    float: left;
     display:list-item;
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 10%;
-    background-color: black opacity: 0,8;
+    background-color: rgba(36,36,36, 0.8);
     height: 100%; /* Full height */
     position: fixed; /* Make it stick, even on scroll */
-    overflow: auto; /* Enable scrolling if the sidenav has too much content*/
+    overflow: none; /* Enable scrolling if the sidenav has too much content*/
     
 }
 .navbar-header{
@@ -41,4 +42,8 @@ body{
 
 .bodycontainer{
     width: 90%;
+    height: 100%;
+    display: block;
+    float: right;
+    padding: 40px;overflow:none;
 }
