Start integrate API google

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,3 +31,11 @@ body{
 	transform: translateX(300px);
 }  
 
+#kml-zone{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+#kml-map {
+    height: 100%;
+}
