--- a/public/views/history.html
+++ b/public/views/history.html
@@ -21,9 +21,9 @@
 		</form>
 	</li>
 </ul>
-<main class="container main-frame" ng-init="init()">
+<main class="historycontainer main-frame" ng-init="init()">
     <div class="page-header">
-        <h1>AngularJS WeatherApp</h1>
+        <h2>Météo</h2>
     </div>
 
     <noscript>
