--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,15 @@
+h1{
+    background-color: rgba(36,36,36, 0.8);
+    width: 50%;
+    border-radius: 5px 10px 10px 5px;
+    padding: 20px;
+}
 body{
     background-image: url("/img/background.jpg");
+    background-repeat:no-repeat;
     background-size: cover;
     width: 100%;
+    color: white;
 }
 
 
@@ -30,7 +38,7 @@ body{
 
 
 .nav>li>a{
-    color:azure;
+    color:white;
     font-family: sans-serif;
     font-size: bold;
     text-align: center;    
@@ -53,4 +61,12 @@ body{
     width: 100%;
     height: 100%;
     margin-left: 160px;
+}
+
+.historycontainer{
+    background-color: rgba(36,36,36, 0.8);
+    width: 50%;
+    border-radius: 5px 10px 10px 5px;
+    padding: 20px;
+    color: white;
 }
