--- a/public/views/walkers.html
+++ b/public/views/walkers.html
@@ -6,8 +6,8 @@
 
 
 <div class="container">
-<!--    <div class="row" style="text-align:center;">-->
-       <div class="row">
+    <!--    <div class="row" style="text-align:center;">-->
+    <div class="row">
         <div class="addWalkersField">
             <button type="button" class="btn btn-info btn-lg modal-add-btn" data-toggle="modal" data-target="#myModal">Ajouter un ami</button>
         </div>
@@ -15,11 +15,13 @@
             <h2> Chercher un ami</h2>
             <div class="searchingwalkers">
                 <input class="searchInput" type="text" ng-model="query" placeholder="Entrer nom d'ami" />
+                <!--
                 <select ng-model="order" class="orderBy" style="color:black;">
                     <option value="" disabled selected hidden>Trier par</option>
-                    <option value="description">Organiser par nom</option>
-                    <option value="description">Organiser par date</option>
+                    <option value="name">Organiser par nom</option>
+                    <option value="name">Organiser par date</option>
                 </select>
+-->
             </div>
         </div>
     </div>
@@ -34,10 +36,15 @@
             </div>
             <div class="modal-body">
                 <div style="text-align:center;">
+                    <div class="listInput">
+                        <input type="text" class="form-control secondPart firsttitle firstChild" id="inputMessage" ng-model="walker.name" placeholder="Nom">
+                        <input type="text" class="form-control secondPart firsttitle firstChild" id="inputMessage" ng-model="walker.email" placeholder="Email">
+                        <input type="text" class="form-control secondPart firsttitle firstChild" id="inputMessage" ng-model="walker.phone" placeholder="Téléphone">
+                    </div>
                     <form>
-                        <input class="parcourir" type='file' ng-model='imageFile' base-sixty-four-input onchange="angular.element(this).scope().previewFile(this)">
+                        <input class="parcourir" type='file' ng-model='walker.imageFile' base-sixty-four-input onchange="angular.element(this).scope().previewFile(this)">
                     </form>
-                    <img id="preview" style="margin-top:30px;" src="{{walkers.image || './public/img/logo.png'}}">
+                    <img id="preview" src="{{walkers.imageFile || 'img/logo.png'}}">
                 </div>
             </div>
             <div class="modal-footer">
@@ -48,41 +55,42 @@
     </div>
 </div>
 <br>
-<br> 
+<br>
 
-<!-- Liste des amis 
+<!-- Liste des amis-->
+<div class="row"></div>
 <ul class="list-group">
-    <li class="list-group-item" ng-repeat="walker in walkers | filter:{description: query} | orderBy:order">
+    <li class="list-group-item" ng-repeat="walker in walkers | filter:{name: query} | orderBy:order">
         <form class=" form-inline">
             <div class="form-group secondForm">
-                <img class="imgAdd" src="{{walkers.image || 'http://fanexpodallas.com/wp-content/uploads/550w_soaps_silhouettesm.jpg'}}" />
+                <img class="imgAdd" src="{{walker.imageFile || 'img/logo.png'}}" />
                 <div class="listInput">
-                    <input type="text" class="form-control secondPart firsttitle firstChild" id="inputMessage" ng-model="walkers.description" placeholder="Prénom">
+                    <input type="text" class="form-control secondPart firsttitle firstChild" id="inputMessage" ng-model="walker.name" placeholder="Prénom">
                 </div>
-                <span class="upDel">
-                    <button type="submit" class="btn btn-default recetteButton" class="btn btn-info btn-lg modal-add-btn" data-toggle="modal" data-target="#{{walkers._id}}">Ami</button>
-                    <button type="submit" class="btn btn-default addbutton1" ng-click="update(walkers)">Mettre à jour</button>
-                    <button type="submit" class="btn btn-danger" ng-click="delete(walkers)">X</button>
+                <button type="submit" class="btn btn-default addbutton1" ng-click="update(walker)">Mettre à jour</button>
+                <button type="submit" class="btn btn-danger" ng-click="delete(walker)">X</button>
                 </span>
             </div>
         </form>
     </li>
-</ul>-->
+</ul>
 
-<!-- Modale fiche amis 
-<div class="modal fade" ng-repeat="walker in walkers | filter:{description: query} | orderBy:order" id="{{walkers._id}}" role="dialog">
+
+<!--
+ Modale fiche amis
+<div class="modal fade" ng-repeat="walker in walkers | filter: {description: query} | orderBy:order" id="{{walkers._id}}" role="dialog">
     <div class="modal-dialog modal-lg hmm">
         <div class="modal-contentwalkers" style="text-align:center;">
-            <div class="modal-header2" ng-style="{'background-image':'url({{walkers.image || 'http://fanexpodallas.com/wp-content/uploads/550w_soaps_silhouettesm.jpg'}})'}">
-                <h2 class="modal-title2">{{walkers.description}}</h2>
+            <div class="modal-header2" ng-style="{'background-image':'url({{walkers.image || 'img/logo.png'}})'}">
+                <h2 class="modal-title2">{{walkers.name}}</h2>
             </div>
             <div class="modal-body">
-                <!--<ul class="ingList2">
+                <ul class="ingList2">
                     <li> 
                 <div class="row subPart">
                     <h3>Changer le nom</h3>
                
-                    <input type="text" class="walkers-form-control" id="walkersinputMessage" ng-model="walkers.description">
+                    <input type="text" class="walkers-form-control" id="walkersinputMessage" ng-model="walkers.name">
                 </div>
                 <div class="row subPart">
                     <h3>Commentaires</h3>
