--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,8 @@ body{
     width: 100%;
     color: white;
     background-attachment: fixed;
+    
+    overflow: none;
 }
 
 .nav-content{
@@ -88,7 +90,7 @@ body{
 .bodycontainer{
     width: 100%;
     height: 100%;
-    margin-left: 160px;
+    margin-left: 180px;
 }
 
 .historycontainer{
@@ -97,8 +99,17 @@ body{
     border-radius: 5px 10px 10px 5px;
     padding: 20px;
     color: white;
+    display: block;
+    float: right;
+    padding: 40px;
+    overflow: none;
+    }
+    
+.row{
+       width:800px; 
+    }
+    
 
-}
 #kml-zone-map {
     height: 600px;
 }
