--- a/public/views/walkers.html
+++ b/public/views/walkers.html
@@ -66,6 +66,8 @@
                 <img class="imgAdd" src="{{walker.imageFile || 'img/logo.png'}}" />
                 <div class="listInput">
                     <input type="text" class="form-control secondPart firsttitle firstChild" id="inputMessage" ng-model="walker.name" placeholder="Prénom">
+                    <input type="text" class="form-control secondPart firsttitle firstChild" id="inputMessage" ng-model="walker.email" placeholder="Email">
+                    <input type="text" class="form-control secondPart firsttitle firstChild" id="inputMessage" ng-model="walker.phone" placeholder="Téléphone">
                 </div>
                 <button type="submit" class="btn btn-default addbutton1" ng-click="update(walker)">Mettre à jour</button>
                 <button type="submit" class="btn btn-danger" ng-click="delete(walker)">X</button>
