--- a/public/views/history.html
+++ b/public/views/history.html
@@ -13,7 +13,7 @@
         <!-- ajax loader image -->
         <div ng-show="loader == 1" class="loader"><img src="img/ajax-loader.gif" alt=" "></div>
 
-        <!-- weather report --->
+        <!-- weather report -->
         <article ng-show="status == 200 && data.cod == 200">
             <h2>
 						{{data.city.name}}, {{data.city.country}}
