--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,6 @@ body{
     width: 100%;
     color: white;
     background-attachment: fixed;
-    
     overflow: none;
 }
 
@@ -54,15 +53,17 @@ body{
 
 
 .list-group-item{
+    display: inline-flex;
     background-color: rgba(36,36,36, 0.8); 
     width: 300px;
+    height: 400px;
     margin: 10px;
-    border-radius: 5px 10px 10px 5px;
+    border-radius: 5px 5px 5px 5px;
     text-align: center;
     padding: 15px;
 }
 .imgAdd{
-    width: 150px;
+    height: 175px;
 }
    
 /*
@@ -88,7 +89,7 @@ body{
     height: 100%;
 }
 .bodycontainer{
-    width: 100%;
+    width: 1100px;
     height: 100%;
     margin-left: 180px;
 }
