--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,46 +1,90 @@
-body{
-    background-image: url("/img/background.jpg");
-    background-size: cover;
-    width: 100%;
+h1 {
+    background-color: rgba(36, 36, 36, 0.8);
+    width: 50%;
+    border-radius: 5px 10px 10px 5px;
+    padding: 20px;
 }
 
+body {
+    background-image: url("/img/background.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    background-attachment: fixed;
+    overflow: none;
+}
 
-.navbar{
+.nav-content {
+    padding: 10%;
+}
+
+.navbar {
     float: left;
-    display:list-item;
+    display: list-item;
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 10%;
-    background-color: rgba(36,36,36, 0.8);
-    height: 100%; /* Full height */
-    position: fixed; /* Make it stick, even on scroll */
-    overflow: none; /* Enable scrolling if the sidenav has too much content*/
-    
-}
-.navbar-header{
-    width: 10%;
+    width: 150px;
+    background-color: rgba(36, 36, 36, 0.8);
+    height: 100%;
+    /* Full height */
+    position: fixed;
+    /* Make it stick, even on scroll */
+    overflow: none;
+    /* Enable scrolling if the sidenav has too much content*/
 }
 
-.nav>li>a>img{
+.navbar-header {
+    width: 120px;
+}
+
+.navbar-header img {
     width: 50px;
 }
-.nav>li>a{
-    color:azure;
+
+.navbar-header img:hover {
+    transform: translateX(150px);
+}
+
+.navbar-header img {
+    transition: 7s;
+}
+
+.nav>li>a {
+    color: white;
     font-family: sans-serif;
     font-size: bold;
-    text-align: center;    
+    text-align: center;
+}
+
+.list-group-item {
+    background-color: rgba(36, 36, 36, 0.8);
+    width: 300px;
+    margin: 10px;
+    border-radius: 5px 10px 10px 5px;
+    text-align: center;
+    padding: 15px;
+}
+
+.imgAdd {
+    width: 150px;
 }
 
 
-.navbar-header img{
-	transition: 7s;
-}
-.navbar-header img:hover{
-	transform: translateX(300px);
-}  
+/*
+    border-radius: 5px 10px 10px 5px;
+    padding: 20px;
+    color: white;
+*/
 
-#kml-zone{
+
+}
+.form-inline {
+    background-color: rgba(36, 36, 36, 0.8);
+    padding: 0 auto;
+    position: absolute;
+}
+#kml-zone {
     height: 100%;
     margin: 0;
     padding: 0;
@@ -48,15 +92,32 @@ body{
 #kml-map {
     height: 100%;
 }
-.bodycontainer{
-    width: 90%;
+.bodycontainer {
+    width: 100%;
     height: 100%;
+    margin-left: 180px;
+}
+.historycontainer {
+    background-color: rgba(36, 36, 36, 0.8);
+    width: 50%;
+    border-radius: 5px 10px 10px 5px;
+    padding: 20px;
+    color: white;
     display: block;
     float: right;
     padding: 40px;
-    margin-left: 180px;
-    overflow:none;
+    overflow: none;
+}
+.row {
+    width: 800px;
 }
 #kml-zone-map {
     height: 600px;
+}
+.addSomething {
+    margin-left: 180px;
+    ;
+}
+.bip {
+    text-align: center;
 }
