--- a/public/views/circuit.html
+++ b/public/views/circuit.html
@@ -1,71 +1,78 @@
-<h1 style="margin-left: 400px;">{{title}}</h1>
+<h1 style="margin-left:180px;">{{title}}</h1>
 <!-- Bouton ajout de soirée -->
-<div style="margin-left: 400px;" class="addPlatField col-md-6">
-    <h2>Ajouter une soirée</h2>
+<div class="addSomething" class=" col-md-6">
+    <h2>Ajouter un circuit</h2>
     <button type="button" class="btn btn-info btn-lg modal-add-btn" data-toggle="modal" data-target="#myModal">Ajouter</button>
 </div>
 
 
 
-<div style="margin-left: 400px;" class="modal fade" id="myModal" role="dialog">
+<div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Ajouter une soirée{{i}}</h4>
+                <h4 class="modal-title">Ajouter un circuit</h4>
             </div>
-            <div class="modal-body" ng-if="i==1">
+            <div class="modal-body bip" ng-if="i==1">
                 <div class="row">
+                    <h3>Information sur la sortie</h3>
                     <input type="text" class="form-control" id="inputMessage" placeholder="Titre" ng-model="name">
-                    <input type="text" class="control" id="inputMessage" placeholder="Date de la soirée jj/mm/AAAA" ng-model="date">
+                    <input type="text" class="control" id="inputMessage" placeholder="Date de la sortie" ng-model="date">
                 </div>
-                <div style="text-align:center;">
-                    <form>
-                        <input class="parcourir" type='file' ng-model='imageFile' base-sixty-four-input onchange="angular.element(this).scope().previewFile(this)">
-                    </form>
-                    <img id="preview" style="margin-top:30px;" src="{{soiree.image || 'http://i.istockimg.com/file_thumbview_approve/31297488/6/stock-illustration-31297488-party-and-celebration-icon-set-.jpg'}}">
+
+            </div>
+            <div class="modal-body" ng-if="i==2" style="text-align:center">
+                <div class="form-group">
+                    <label for="s-move">Vous vous déplacez...</label>
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="feetorbike" value="feet" required="required" /> A pied
+                        </label>
+                    </div>
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="feetorbike" value="bike" required="required" />En vélo
+                        </label>
+                    </div>
                 </div>
             </div>
-            <div class="modal-body" ng-if="i==2">
+            <div class="modal-body" ng-if="i==3" style="text-align:center">
                 <div class="row">
-                    <div class="col-md-6">
-                        <h3>Invités</h3>
-                        <ul style="list-style: none;">
-                            <li ng-repeat="invite in invites">
-                                <input type="checkbox" ng-model="invite.select" ng-click="addToSoireesInvites(invite)"> {{invite.description}}</li>
-                        </ul>
+                    <div>
+                        <h3>Quel est le niveau de difficulté ?</h3>
+                        <form class="form-horizontal">
+                            <fieldset>
+
+                                <!-- Select Basic -->
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="selectbasic">Select Basic</label>
+                                    <div class="col-md-4">
+                                        <select id="selectbasic" name="selectbasic" class="form-control">
+                                            <option value="1">Très débutant</option>
+                                            <option value="2">Débutant</option>
+                                            <option value="3">Intermédiaire</option>
+                                            <option value="4">Expert</option>
+                                            <option value="5">Une machine !</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                            </fieldset>
+                        </form>
                     </div>
-                    <div class="col-md-6">
-                        <h3>Plats</h3>
-                        <ul style="list-style: none;">
-                            <li ng-repeat="plat in plats">
-                                <input type="checkbox" ng-model="plat.select" ng-click="addToSoireesPlats(plat)"> {{plat.description}}
-                            </li>
-                        </ul>
-                    </div>
+
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-default recetteButton" ng-click="add()" style="float:right;">Valider</button>
                 <button class="btn btn-danger" ng-click="precedent(i)" style="float:right;" ng-hide="i==1">Précédent</button>
-                <button class="btn btn-default addbutton1" ng-click="suivant(i)" style="float:right;" ng-hide="i==2">Suivant</button>
+                <button class="btn btn-default" ng-click="suivant(i)" style="float:right;" ng-hide="i==2; i==3, i==4,">Suivant</button>
                 <button type="button" class="btn btn-danger" data-dismiss="modal" style="float:right;">Annuler</button>
             </div>
         </div>
     </div>
 </div>
-
-<form style="margin-left:400px;" class="form-inline">
-    <div class="form-group">
-        <input type="text" class="form-control" id="inputMessage" placeholder="Nom du circuit" ng-model="circuit.name">
-        <input type="text" class="form-control" id="inputMessage" placeholder="Lieu" ng-model="circuit.place">
-        <input type="text" class="form-control" id="inputMessage" placeholder="Moyen de locomotion" ng-model="circuit.locomotion">
-        <input type="text" class="form-control" id="inputMessage" placeholder="Pouet" ng-model="circuit.kml">
-        <input type="text" class="form-control" id="inputMessage" placeholder="Distance" ng-model="circuit.distance">
-        <input type="text" class="form-control" id="inputMessage" placeholder="Difficulté" ng-model="circuit.diffictulty">
-    </div>
-    <button type="submit" class="btn btn-default" ng-click="add()">ajouter</button>
-</form>
 
 <ul class="list-group">
     <li class="list-group-item" ng-repeat="circuit in circuits">
