--- a/public/views/circuit.html
+++ b/public/views/circuit.html
@@ -17,8 +17,8 @@
             <div class="modal-body bip" ng-if="i==1">
                 <div class="row">
                     <h3>Information sur la sortie</h3>
-                    <input type="text" class="form-control" id="inputMessage" placeholder="Titre" ng-model="name">
-                    <input type="text" class="control" id="inputMessage" placeholder="Date de la sortie" ng-model="date">
+                    <input type="text" class="form-control" id="inputMessage" placeholder="Titre" ng-model="name" required>
+                    <input type="text" class="control" id="inputMessage" placeholder="Date de la sortie" ng-model="date" required>
                 </div>
 
             </div>
@@ -27,12 +27,12 @@
                     <label for="s-move">Vous vous déplacez...</label>
                     <div class="radio">
                         <label>
-                            <input type="radio" name="feetorbike" value="feet" required="required" /> A pied
+                            <input type="radio" name="feetorbike" value="feet" required="required" ng-model="feet" ng-click="add()" />A pied
                         </label>
                     </div>
                     <div class="radio">
                         <label>
-                            <input type="radio" name="feetorbike" value="bike" required="required" />En vélo
+                            <input type="radio" name="feetorbike" value="bike" required="required" ng-model="bike" ng-click="add()" />En vélo
                         </label>
                     </div>
                 </div>
@@ -46,14 +46,12 @@
 
                                 <!-- Select Basic -->
                                 <div class="form-group">
-                                    <label class="col-md-4 control-label" for="selectbasic">Select Basic</label>
+                                    <label class="col-md-4 control-label" for="selectbasic"></label>
                                     <div class="col-md-4">
                                         <select id="selectbasic" name="selectbasic" class="form-control">
-                                            <option value="1">Très débutant</option>
-                                            <option value="2">Débutant</option>
-                                            <option value="3">Intermédiaire</option>
-                                            <option value="4">Expert</option>
-                                            <option value="5">Une machine !</option>
+                                            <option value="occasionnel">Occasionnel</option>
+                                            <option value="habitue">Habitué</option>
+                                            <option value="sportif">Sportif</option>
                                         </select>
                                     </div>
                                 </div>
@@ -64,11 +62,18 @@
 
                 </div>
             </div>
+
+            <div class="modal-body" ng-if="i==4" style="text-align:center">
+                <div class="row">
+                    <input type="text" class="form-control" value="http://www.google.com/maps/d/kml?mid=z4t2qn7YIVEQ.kA0ng124KU8Q">
+
+                </div>
+            </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-default recetteButton" ng-click="add()" style="float:right;">Valider</button>
                 <button class="btn btn-danger" ng-click="precedent(i)" style="float:right;" ng-hide="i==1">Précédent</button>
-                <button class="btn btn-default" ng-click="suivant(i)" style="float:right;" ng-hide="i==2; i==3, i==4,">Suivant</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" style="float:right;">Annuler</button>
+                <button class="btn btn-default" ng-click="suivant(i)" style="float:right;" ng-hide="i==2; i==3; i==4">Suivant</button>
+                <button type="submit" class="btn btn-default" ng-click="add()" style="float:right;" data-dismiss="modal">Valider</button>
+                <button type="submit" class="btn btn-danger" data-dismiss="modal" style="float:right;">Annuler</button>
             </div>
         </div>
     </div>
@@ -79,6 +84,7 @@
         <form class="form-inline">
             <div class="form-group">
                 <input type="text" class="form-control" id="name" ng-model="circuit.name">
+                <input type="text" class="form-control" id="name" ng-model="circuit.date">
             </div>
             <div class="pull-right">
                 <button type="submit" class="btn btn-default" ng-click="update(circuit)">Update</button>
