--- a/public/views/kml.html
+++ b/public/views/kml.html
@@ -2,7 +2,7 @@
 
   <div id="kml-zone">
    <ng-map zoom="11" center="41.875696,-87.624207">
-        <kml-layer url="http://www.google.com/maps/d/kml?mid=z4t2qn7YIVEQ.kA0ng124KU8Q">
+        <kml-layer url={{url-kml}}>
         </kml-layer>
       </ng-map>
   </div>
@@ -10,13 +10,8 @@
 <!--
 
 
-    <ng-map center="48.55, 1.027" id="kml-zone-map">
-
-    <kml-layer url="http://localhost:8000/kml/doc.kml">
-    </kml-layer>
-
-    </ng-map>
-
+       <kml-layer url="http://www.google.com/maps/d/kml?mid=z4t2qn7YIVEQ.kA0ng124KU8Q">
+ 
  clé API Google : AIzaSyAamy-iuBFyQu-qNuihVdTQDCPyaqzrUac 
 
 -->
