--- a/public/views/history.html
+++ b/public/views/history.html
@@ -1,134 +1,58 @@
-<main class="container main-frame" ng-init="init()">
-    <div class="page-header">
-        <h1>Vos Circuits</h1>
+
+<h1 style="margin-left: 180px;">{{title}}</h1>
+<!-- Bouton ajout de soirée -->
+<div style="margin-left: 180px;" class="addPlatField col-md-6">
+
+    <button type="button" class="btn btn-info btn-lg modal-add-btn" data-toggle="modal" data-target="#myModal">Ajouter</button>
+</div>
+
+
+
+<div style="margin-left: 180px;" class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Ajouter une rando</h4>
+            </div>
+            <div class="modal-body" ng-if="i==1">
+                <div class="row">
+                    <select ng-model="inputInvite" class="form-control">
+                        <option ng-repeat="circuit in circuits" value="{{circuit._id}}">
+                            {{circuit.name}}
+                        </option>
+                    </select>
+                </div>
+            </div>
+            <div class="modal-body" ng-if="i==2">
+                <div class="row">
+                    <select ng-model="inputInvite" class="form-control">
+                        <option ng-repeat="walker in walkers" value="{{walker._id}}">
+                            {{walker.name}}
+                        </option>
+                    </select>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-default recetteButton" ng-click="add()" style="float:right;">Valider</button>
+                <button class="btn btn-danger" ng-click="precedent(i)" style="float:right;" ng-hide="i==1">Précédent</button>
+                <button class="btn btn-default addbutton1" ng-click="suivant(i)" style="float:right;" ng-hide="i==2">Suivant</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" style="float:right;">Annuler</button>
+            </div>
+        </div>
     </div>
+</div>
 
-
-    <div class="hide-on-no-js">
-        <!-- search form -->
-        <form class="form-inline" ng-submit="submit()">
-            <input type="text" class="form-control input-lg" placeholder="Entrer nom de ville" ng-model="loc">
+<ul class="list-group">
+    <li class="list-group-item" ng-repeat="circuit in circuits">
+        <form class="form-inline">
+            <div class="form-group">
+                <input type="text" class="form-control" id="name" ng-model="circuit.name">
+            </div>
+            <div class="pull-right">
+                <button type="submit" class="btn btn-default" ng-click="update(circuit)">Update</button>
+                <button type="submit" class="btn btn-danger" ng-click="delete(circuit)">Delete</button>
+            </div>
         </form>
-
-        <!-- ajax loader image -->
-        <div ng-show="loader == 1" class="loader"><img src="img/ajax-loader.gif" alt=" "></div>
-
-        <!-- weather report -->
-        <article ng-show="status == 200 && data.cod == 200">
-            <h2>
-						{{data.city.name}}, {{data.city.country}}
-					</h2>
-
-            <table class="table table-striped" style="width:300px; display:inline-block; text-align:center;">
-
-                <tbody>
-                    <tr>
-                        <h1>Aujourd'hui</h1>
-                        <th>Temps</th>
-                        <td>{{data.list[0].weather[0]['main']}} <img ng-src=" {{img}} " alt=""></td>
-
-                    </tr>
-                    <tr>
-                        <th>Température</th>
-                        <td>{{data.list[0].main.temp | customKelvinToCelsiusFilter | number:2}}&deg;C</td>
-                    </tr>
-                    <tr>
-                        <th>Humidité</th>
-                        <td>{{data.list[0].main.humidity}}%</td>
-                    </tr>
-                    <tr>
-                        <th>Vent</th>
-                        <td>{{data.list[0].wind.speed}}mps </td>
-                    </tr>
-                </tbody>
-
-                <tbody>
-                    <tr>
-                        <h1>Demain</h1>
-                        <th>Temps</th>
-                        <td>{{data.list[1].weather[0]['main']}} <img ng-src="{{img}} " alt=" " style="width:35px; margin-left:10px; "></td>
-
-                    </tr>
-                    <tr>
-                        <th>Température</th>
-                        <td>{{data.list[1].main.temp | customKelvinToCelsiusFilter | number:2}}&deg;C</td>
-                    </tr>
-                    <tr>
-                        <th>Humidité</th>
-                        <td>{{data.list[1].main.humidity}}%</td>
-                    </tr>
-                    <tr>
-                        <th>Vent</th>
-                        <td>{{data.list[1].wind.speed}}mps </td>
-                    </tr>
-                </tbody>
-                <h1>Après demain</h1>
-                <tbody>
-                    <tr>
-                        <th>Temps</th>
-                        <td>{{data.list[2].weather[0]['main']}} <img ng-src="{{img}} " alt=" " style="width:35px; margin-left:10px; "></td>
-
-                    </tr>
-                    <tr>
-                        <th>Température</th>
-                        <td>{{data.list[2].main.temp | customKelvinToCelsiusFilter | number:2}}&deg;C</td>
-                    </tr>
-                    <tr>
-                        <th>Humidité</th>
-                        <td>{{data.list[2].main.humidity}}%</td>
-                    </tr>
-                    <tr>
-                        <th>Vent</th>
-                        <td>{{data.list[2].wind.speed}}mps </td>
-                    </tr>
-                </tbody>
-                <h1>J+3</h1>
-                <tbody>
-                    <tr>
-                        <th>Temps</th>
-                        <td>{{data.list[3].weather[0]['main']}} <img ng-src="{{img}} " alt=" " style="width:35px; margin-left:10px; "></td>
-
-                    </tr>
-                    <tr>
-                        <th>Température</th>
-                        <td>{{data.list[3].main.temp | customKelvinToCelsiusFilter | number:2}}&deg;C</td>
-                    </tr>
-                    <tr>
-                        <th>Humidité</th>
-                        <td>{{data.list[3].main.humidity}}%</td>
-                    </tr>
-                    <tr>
-                        <th>Vent</th>
-                        <td>{{data.list[3].wind.speed}}mps </td>
-                    </tr>
-                </tbody>
-                <h1>J+4</h1>
-                <tbody>
-                    <tr>
-                        <th>Temps</th>
-                        <td>{{data.list[4].weather[0]['main']}} <img ng-src="{{img}} " alt=" " style="width:35px; margin-left:10px; "></td>
-
-                    </tr>
-                    <tr>
-                        <th>Température</th>
-                        <td>{{data.list[4].main.temp | customKelvinToCelsiusFilter | number:2}}&deg;C</td>
-                    </tr>
-                    <tr>
-                        <th>Humidité</th>
-                        <td>{{data.list[4].main.humidity}}%</td>
-                    </tr>
-                    <tr>
-                        <th>Vent</th>
-                        <td>{{data.list[4].wind.speed}}mps </td>
-                    </tr>
-                </tbody>
-            </table>
-
-        </article>
-
-
-
-        <!-- ajax response -->
-        <!-- <pre ng-show="data ">{{data}}</pre> -->
-    </div>
-</main>
+    </li>
+</ul>
