--- a/public/views/kml.html
+++ b/public/views/kml.html
@@ -1,10 +1,10 @@
 <h1>{{title}}</h1>
 
   <div id="kml-zone">
-   <ng-map zoom="11" center="41.875696,-87.624207">
-        <kml-layer url={{url-kml}}>
+ 	<ng-map zoom="11" center="41.875696,-87.624207">
+        <kml-layer url="http://www.google.com/maps/d/kml?mid=z4t2qn7YIVEQ.kA0ng124KU8Q">
         </kml-layer>
-      </ng-map>
+    </ng-map>
   </div>
 
 <!--
